# wam

./: .travis.yml  Makefile  README  README.md  package.yaml  wam.cabal  wam.lkshs  wam.lkshw
pl/: hassan.pl  hassan.wam  perm.pl  perm.wam  prelude.pl  prelude.wam
pl/hopes/: closure.pl  closure2.pl  higher_order_failure.pl  multiple_partial_applications.pl  nested_partial_applications.pl  partial_application.pl
src/: Main.hs  Prolog.hs  WAM.hs
src/Prolog/: Parser.hs
src/WAM/: Compile.hs  Emit.hs  Instruction.hs  Runtime.hs
src/WAM/Runtime/: Mem.hs  Stats.hs  Trace.hs
tests/: 10unsafe.pl  10unsafe.wam  1fact.pl  1fact.wam  2multifact.pl  2multifact.wam  3and.pl  3and.wam  4thread.pl  4thread.wam  5unify.pl  5unify.wam  6unify.pl  6unify.wam  7reverse.pl  7reverse.wam  8envprotect.pl  8envprotect.wam  9unsafe.pl  9unsafe.wam  Makefile
