name: 		    wam
version: 	    0.0.1
build-type: 	Simple
license: 	    GPL
license-file: 	LICENSE
synopsis:       Simple Prolog Compiler to WAM
description:
    A simple Prolog compiler to WAM

copyright: 	    2012 Angelos Charalambidis
maintainer: 	Angelos Charalambidis <a.charalambidis@di.uoa.gr>
author:		    Angelos Charalambidis <a.charalambidis@di.uoa.gr>
stability:      Experimental
category:       Compilers/Interpreters
homepage:       https://github.com/acharal/wam
bug-reports:    https://github.com/acharal/wam/issues

build-depends: array -any, transformers -any, mtl -any,
               parsec -any, base -any, pretty -any
package-url:


tested-with: 
data-files:
data-dir: ""
extra-source-files:
extra-tmp-files:
 
executable: wam
main-is: Main.hs
buildable: True
hs-source-dirs: src
other-modules:  WAM 
                WAM.Runtime 
                WAM.Compile 
                WAM.Emit
                WAM.Instruction
                Prolog
extensions: DoAndIfThenElse
ghc-prof-options: -prof -auto-all
ghc-shared-options:
ghc-options:
